Bug 1555966 - Back out cset ecceef291b89 (bug 1551601) for regressions. rs=valentin