netwerk/protocol/http/nsHttpChannel.cpp
@@ -5240,44 +5240,6 @@ nsresult nsHttpChannel::ReadFromCache(bool alreadyMarkedValid) {
 
   nsresult rv;
 
-  // notify "http-on-may-change-process" observers
-  gHttpHandler->OnMayChangeProcess(this);
-
-  if (mRedirectContentProcessIdPromise) {
-    PushRedirectAsyncFunc(&nsHttpChannel::ContinueReadFromCache);
-    rv = StartCrossProcessRedirect();
-    if (NS_SUCCEEDED(rv)) {
-      return NS_OK;
-    }
-    PopRedirectAsyncFunc(&nsHttpChannel::ContinueReadFromCache);
-  }
-
-  return ContinueReadFromCache(NS_OK);
-}
-
-nsresult nsHttpChannel::ContinueReadFromCache(nsresult rv) {
-  LOG(("nsHttpChannel::ContinueReadFromCache [this=%p] spec: %s\n", this,
-       mSpec.get()));
-
-  // The channel may have been cancelled in the meantime, either by the
-  // consumer or the channel classifier. In that case, we need to AsyncAbort
-  // to ensure OnStart/StopRequest are called.
-  // This should only be an error code if the cross-process redirect failed,
-  // and OnRedirectVerifyCallback was called with an error code.
-  if (NS_FAILED(rv)) {
-    // rv can only be an error code if this was a failed cross-process redirect
-    // It shouldn't have happened during a revalidation.
-    MOZ_ASSERT(!mDidReval, "Should not be a 304 response");
-    // Also, this should not be possible.
-    MOZ_ASSERT(!mCachedContentIsPartial, "Unexpected partially cached page?");
-
-    MOZ_ASSERT(!mCachePump);
-
-    CloseCacheEntry(false);
-    DoAsyncAbort(NS_FAILED(mStatus) ? mStatus : rv);
-    return rv;
-  }
-
   // Keep the conditions below in sync with the conditions in
   // StartBufferingCachedEntity.
 
